--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ font-size:18px; color:#5f3d39; font-family: 'Titillium Web', sans-serif; line-he
 }
 
 .list_area1 h2{
-   background: #ffff none repeat scroll 0 0;
+   background: #ffffff none repeat scroll 0 0;
     color: #b26426;
     font-family: "Titillium Web",sans-serif;
     font-size: 36px;
