--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ font-size:18px; color:#5f3d39; font-family: 'Titillium Web', sans-serif; line-he
 }
 .listing_section2 li span{ font-size:22px; color:#b26426; font-weight:600; margin-right:20px;}
 .list_area2 h2{
-    background: #ffff none repeat scroll 0 0;
+    background: #fff none repeat scroll 0 0;
     padding: 0 8px;
     position: absolute;
     top: -16px;
