--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ font-size:18px; color:#5f3d39; font-family: 'Titillium Web', sans-serif; line-he
 .banner_text h2{ font-size:42px; color:#5f3d39; font-family: 'Titillium Web', sans-serif; line-height:50px;}
 .banner_text h2 span{ color:#b26426; font-size:34px; display:block;}
 
-.bdy_section{ width:100%; background:#FFF; padding:0 0 0 0;}
+.bdy_section{ width:100%; background:#FFF; padding:80px 0 0 0;}
 .list_area{ border:1px solid #ccc1bf; padding:32px;}
 .listing_section{ padding:0 ; margin:0;}
 .listing_section li{ list-style:none; display:block; padding:8px 0px 8px 3.5%; background:url(../images/listing_icon.png) no-repeat scroll left 13px;
