--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ font-size:18px; color:#5f3d39; font-family: 'Titillium Web', sans-serif; line-he
     right: -80px;
     top: 33%;
     width: 70%;}
-.banner_text h2{ font-size:42px; color:#5f3d39; font-family: 'Titillium Web', sans-serif; line-height:50px;}
+.banner_text h2{ font-size:42px; color:#5f3d39; font-family: 'Titillium Web', sans-serif; line-height:50px; font-weight:600;}
 .banner_text h2 span{ color:#b26426; font-size:34px; display:block;}
 
 .bdy_section{ width:100%; background:#FFF; padding:80px 0 0 0;}
